sass/components/_list_items.scss
.list-item {
  margin-bottom: $ecl-spacing-l;
  &__title {
    @extend .ecl-u-type-heading-4;
    margin-top: 0;
    margin-bottom: $ecl-spacing-xs;
  }
  &__meta {
    @extend .ecl-u-type-s;
    @extend .ecl-u-type-color-grey-75;
    margin-bottom: $ecl-spacing-xs;
    text-transform: uppercase;
  }
  &__description {
    @extend .ecl-u-type-color-grey-100;
    font: $ecl-font-prolonged-m;
    p {
      margin: 0;
    }
  }
}
.list-item {
  &__image {
    @extend .ecl-media-container;
    margin-bottom: $ecl-spacing-m;
    background-color: transparent;
    img {
      @extend .ecl-media-container__media;
    }
    @include ecl-media-breakpoint-up("md") {
      width: 180px;
      margin-bottom: 0;
    }
    @include ecl-media-breakpoint-up("lg") {
      width: 220px;
    }
    &__before {
      @include ecl-media-breakpoint-up("md") {
        margin-right: $ecl-spacing-l;
      }
      @include ecl-media-breakpoint-up("lg") {
        margin-right: $ecl-spacing-l;
      }
    }
    &__after {
      @include ecl-media-breakpoint-up("md") {
        margin-left: $ecl-spacing-l;
      }
      @include ecl-media-breakpoint-up("lg") {
        margin-left: $ecl-spacing-l;
      }
    }
  }
  &__date {
    @include ecl-media-breakpoint-up("md") {
      margin-right: $ecl-spacing-l;
    }
    @include ecl-media-breakpoint-up("lg") {
      margin-right: $ecl-spacing-l;
    }
  }
}

